# specPets

./: .gitignore  DEPLOYMENT.md  MARKETPLACE_IMPLEMENTATION.md  MVP_STATUS.md  PHASE3_SUMMARY.md  PHASE9-SUMMARY.md  QUICKSTART.md  README.md  RUN_MVP.md  SPEC2CLOUD.md  azure.yaml  deploy.ps1  test-docker-builds.ps1
.github/workflows/: ca-frontend-jogv73uyqkmze-AutoDeployTrigger-27112467-84dc-48e1-b1a6-524e5fb59814.yml
.specify/memory/: constitution.md
backend/: .dockerignore  AUTHENTICATION.md  Backend.csproj  Dockerfile  Program.cs
backend/Data/: AppDbContext.cs
backend/Endpoints/: AvailabilityEndpoints.cs  BookingEndpoints.cs  MessageEndpoints.cs  PetOwnerEndpoints.cs  PetSitterEndpoints.cs  ReviewEndpoints.cs  SearchEndpoints.cs
backend/Models/: Availability.cs  Booking.cs  Message.cs  Pet.cs  PetOwner.cs  PetSitter.cs  Review.cs  Service.cs
backend/Repositories/: AvailabilityRepository.cs  BookingRepository.cs  MessageRepository.cs  PetOwnerRepository.cs  PetRepository.cs  PetSitterRepository.cs  ReviewRepository.cs  (+1 more)
booking-agent/: .dockerignore  .env.example  Dockerfile  README.md  agent.py  pyproject.toml  simple_agent.py
data/: reviews.json  sitters.json
frontend/: .dockerignore  Dockerfile  PHASE5_TESTING.md  nginx.conf  package-lock.json  package.json  tsconfig.json  vite-env.d.ts
infra/: README.md  abbreviations.json  main.bicep  main.parameters.json
orchestrator-agent/: .env.example  README.md  orchestrator.py  pyproject.toml  simple_agent.py
sitter-agent/: .env.example  README.md  agent.py  pyproject.toml  simple_agent.py
(+103 files in other folders)
